src/test/deca/syntax/valid/MultiLineString.deca
// Test Multi Line String avec \


"ligne 1\\
ligne 2\
ligne 3"

