src/test/deca/syntax/invalid/MultiLineString.deca
//Valide pour le lexer, invalide pour le parser
// Test Multi Line String avec \



"ligne 1\\
ligne 2\
ligne 3"

